--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,4 @@ version: '1.0.0'
 main: me.levitate.marketplace.Marketplace
 api-version: '1.20'
 authors: [ Levitate ]
-depend: [ Quill, Vault ]
+depend: [ Quill, Vault, NDatabase ]
